KFilePropsPlugin: Allow to edit properties when setFileNameReadOnly is set

Don't empty the fileNameLineEdit to avoid the dialog ok button being disabled by nameFileChanged()

BUG: 441847